# Xura

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/xura-core/: Cargo.toml
crates/xura-core/src/: device.rs  dtype.rs  error.rs  lib.rs  module.rs  ops.rs  shape.rs  storage.rs  tensor.rs
crates/xura-mamba/: Cargo.toml
crates/xura-mamba/src/: cache.rs  causal_conv1d.rs  complex_utils.rs  config.rs  dplr.rs  fft_conv.rs  hippo.rs  lib.rs  loader.rs  mamba.rs  mamba2.rs  mamba3.rs  mixer.rs  model.rs  norm.rs  s4_block.rs  s4_kernel.rs  selective_scan.rs  ssd.rs  ssd3.rs
crates/xura-vljepa/: ARCHITECTURE.md  Cargo.toml
crates/xura-vljepa/src/: agent.rs  angn.rs  config.rs  lib.rs  loader.rs  loss.rs  memory.rs  predictor.rs  recursion.rs  selective_decode.rs  tools.rs  vit.rs  vljepa.rs  y_decoder.rs  y_encoder.rs
examples/: mamba3_agent.rs  mamba3_jepa_train.rs
notebooks/: _dinov2_wrapper_snippet.md  kaggle_phase1_phase2_t4.py  kaggle_phase1_t4.py  kaggle_phase2_t4.py
tests/: test_notebooks.py
training/: README.md  WEIGHT_MAPPING.md  requirements.txt
training/data/: generate_sample_data.py
training/models/: __init__.py  angn.py  mamba3.py  predictor.py  vit.py  vljepa.py  y_decoder.py  y_encoder.py  y_encoder_pretrained.py
training/scripts/: train_agent.py  train_decoder.py  train_jepa.py
training/utils/: __init__.py  export_weights.py  stream_loader.py
