[workspace]
members = [
    "crates/xura-mamba",
    "crates/xura-vljepa",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ikaros Digital LLC"]
license = "Apache-2.0"

[workspace.dependencies]
# Math & Tensors
num-traits = "0.2"
num-complex = "0.4"
half = "2.3"
rustfft = "6.2"
smallvec = "1.11"

# Random
rand = "0.8"

# Serialization
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# KORE foundation crates (git deps)
kore-core = { git = "https://github.com/KidIkaros/KORE", version = "0.1.0" }
kore-nn = { git = "https://github.com/KidIkaros/KORE", version = "0.1.0" }
kore-transformer = { git = "https://github.com/KidIkaros/KORE", version = "0.1.0" }
kore-attention = { git = "https://github.com/KidIkaros/KORE", version = "0.1.0" }

# Inter-crate
xura-mamba = { path = "crates/xura-mamba" }
xura-vljepa = { path = "crates/xura-vljepa" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
