[workspace]
members = [
    "crates/xura-core",
    "crates/xura-mamba",
    "crates/xura-vljepa",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ikaros Digital LLC"]
license = "Apache-2.0"

[workspace.dependencies]
# Math & Tensors
num-complex = "0.4"
half = "2.3"
rustfft = "6.2"

# Random
rand = "0.8"

# Serialization
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Inter-crate
xura-core = { path = "crates/xura-core" }
xura-mamba = { path = "crates/xura-mamba" }
xura-vljepa = { path = "crates/xura-vljepa" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
